--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -40,10 +40,13 @@
             android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:statusBarScrim="?attr/colorPrimary"
+            app:contentScrim="@color/theme_primary"
+            app:statusBarScrim="@color/theme_primary"
+            android:background="@color/theme_primary"
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleTextAppearance="@color/theme_primary"
+            app:collapsedTitleTextAppearance="@color/white"
             >
 
             <ImageView
@@ -68,13 +71,4 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
-        <!--android:src="@drawable/ic_comment_24dp"-->
-        <!--app:layout_anchor="@id/main.appbar"-->
-        <!--app:layout_anchorGravity="bottom|right|end"-->
-        <!--/>-->
 </android.support.design.widget.CoordinatorLayout>
