--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,8 +22,11 @@
     <color name="theme_primary_dark">#005005</color>
     <color name="theme_primary_light">#60ad5e</color>
     <color name="theme_accent">#FF5722</color>
+    <color name="text_link">#1e88e5</color>
     <color name="primary_text">#212121</color>
+    <color name="byline_grey">#333</color>
     <color name="secondary_text">#757575</color>
     <color name="divider_color">#BDBDBD</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="white">#FFF</color>
 </resources>
