--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -7,11 +7,6 @@
     android:fitsSystemWindows="true"
     >
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/detail_appbar"
         android:layout_width="match_parent"
@@ -35,17 +30,6 @@
             app:expandedTitleMarginEnd="64dp"
             >
 
-            <ImageView
-                android:id="@+id/detail_backdrop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/logo"
-                android:contentDescription="@string/app_name"
-                android:layout_marginTop="140dp"
-                android:layout_marginLeft="20dp"
-                app:layout_collapseMode="parallax"
-                />
-
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -54,8 +38,21 @@
                 android:background="@color/theme_primary"
                 app:layout_collapseMode="pin"
                 />
+
+            <ImageView
+                android:id="@+id/detail_backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:layout_height="wrap_content"
