--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -1,68 +1,6 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
-    android:fitsSystemWindows="true"
-    >
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/detail_appbar"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="@color/theme_primary"
-        android:fitsSystemWindows="true"
-        android:elevation="4dp"
-        >
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/detail_collapsing"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:fitsSystemWindows="true"
-            app:contentScrim="@color/theme_primary"
-            app:statusBarScrim="@color/theme_primary"
-            android:background="@color/theme_primary"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
-            >
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                android:background="@color/theme_primary"
-                app:layout_collapseMode="pin"
-                />
-
-            <ImageView
-                android:id="@+id/detail_backdrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                />
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:src="@drawable/ic_share"
-        android:elevation="@dimen/fab_elevation"
-        android:layout_margin="@dimen/fab_margin"
-        android:contentDescription="@string/action_share"
-        app:layout_anchor="@id/pager"
-        app:layout_anchorGravity="bottom|right|end"
-        />
-
-</android.support.design.widget.CoordinatorLayout>
+    tools:context="com.example.xyzreader.ui.ArticleDetailActivity" />
