--- a/XYZReader/src/main/res/layout/activity_article_list_old.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list_old.xml
@@ -11,7 +11,7 @@
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginTop="40dp"
         android:elevation="0dp">
 
         <android.support.v7.widget.RecyclerView
@@ -38,7 +38,7 @@
             android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|enterAlways"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/theme_primary"
             app:statusBarScrim="@color/theme_primary"
