--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -29,6 +29,7 @@
             <TextView
                 android:id="@+id/article_title"
                 style="?android:attr/textAppearanceLarge"
+                android:transitionName="@string/transition_name_article_detail_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
