--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -27,6 +27,7 @@
         <TextView
             android:id="@+id/article_title"
             style="@style/TextView.SubHeader"
+            android:transitionName="@string/transition_name_article_detail_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
