--- a/XYZReader/src/main/res/layout/activity_main.xml
+++ b/XYZReader/src/main/res/layout/activity_main.xml
@@ -29,27 +29,26 @@
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:fitsSystemWindows="true"
             app:contentScrim="@color/theme_primary"
             app:statusBarScrim="@color/theme_primary"
             android:background="@color/theme_primary"
-            app:expandedTitleTextAppearance="@color/theme_primary"
-            app:collapsedTitleTextAppearance="@color/white">
+            app:expandedTitleTextAppearance="@style/TransparentTitle"
+            app:collapsedTitleTextAppearance="@style/WhiteTitle">
 
             <ImageView
                 android:id="@+id/image_main_backdrop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/logo"
                 android:contentDescription="@string/app_name"
+                android:padding="20dp"
                 app:layout_collapseMode="parallax"
                 />
 
