--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
     <color name="divider_color">#BDBDBD</color>
     <color name="ltgray">#ffe0e0e0</color>
     <color name="white">#FFF</color>
+    <color name="transparent">#00000000</color>
 </resources>
