--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -39,4 +39,11 @@
         <item name="android:textColor">@color/secondary_text</item>
     </style>
 
+    <style name="TransparentTitle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/transparent</item>
+    </style>
+    <style name="WhiteTitle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
