--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,11 +18,10 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#2e7d32</color>
-    <color name="theme_primary_dark">#005005</color>
-    <color name="theme_primary_light">#60ad5e</color>
-    <color name="theme_accent">#FF5722</color>
-    <color name="text_link">#1e88e5</color>
+    <color name="theme_primary">#8BC34A</color>
+    <color name="theme_primary_dark">#689F38</color>
+    <color name="theme_primary_light">#AED581</color>
+    <color name="theme_accent">#FF4081</color>
     <color name="primary_text">#212121</color>
     <color name="byline_grey">#333</color>
     <color name="secondary_text">#757575</color>
